# nifty-llm-research

./: .cursorignore  .gitignore  CHANGELOG.md  Makefile  README.md  README_REBALANCING.md  env.template  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.cursor/rules/: context.json
config/: settings.py
docs/: index.md
docs/baskets/: NIFTY 50__Jul_27_2025_22_04__N20_K5.json  NIFTY 50__Jul_27_2025_22_04__N20_K5.md  NIFTY 50__Jun_02_2025_21_37__N20_K5.json  NIFTY 50__Jun_02_2025_21_37__N20_K5.md  NIFTY 50__Jun_12_2025_19_14__N20_K5.json  NIFTY 50__Jun_12_2025_19_14__N20_K5.md  NIFTY 50__Jun_16_2025_08_06__N20_K5.json  NIFTY 50__Jun_16_2025_08_06__N20_K5.md  NIFTY 50__Jun_23_2025_05_31__N20_K5.json  NIFTY 50__Jun_23_2025_05_31__N20_K5.md  NIFTY 50__Jun_30_2025_10_24__N20_K5.json  NIFTY 50__Jun_30_2025_10_24__N20_K5.md  NIFTY NEXT 50__Dec_01_2025_12_50__N20_K5.json  NIFTY NEXT 50__Dec_01_2025_12_50__N20_K5.md  NIFTY NEXT 50__Nov_10_2025_09_49__N20_K5.json  NIFTY NEXT 50__Nov_10_2025_09_49__N20_K5.md  NIFTY NEXT 50__Nov_10_2025_12_17__N20_K5.json  NIFTY NEXT 50__Nov_10_2025_12_17__N20_K5.md  NIFTY NEXT 50__Nov_17_2025_12_45__N20_K5.json  NIFTY NEXT 50__Nov_17_2025_12_45__N20_K5.md  NIFTY NEXT 50__Nov_24_2025_11_58__N20_K5.json  NIFTY NEXT 50__Nov_24_2025_11_58__N20_K5.md  NIFTY SMALLCAP 250__Aug_03_2025_07_35__N50_K10.json  NIFTY SMALLCAP 250__Aug_03_2025_07_35__N50_K10.md  NIFTY SMALLCAP 250__Aug_11_2025_13_51__N50_K10.json  NIFTY SMALLCAP 250__Aug_11_2025_13_51__N50_K10.md  NIFTY SMALLCAP 250__Aug_13_2025_06_37__N50_K10.json  NIFTY SMALLCAP 250__Aug_13_2025_06_37__N50_K10.md  (+40 more)
prompt_history/: 02-cursor-schema.md  04-cursor-promptconfig.md  07-cursor-readme.md  11-cursor-gitpage.md  14-cursor-gemini-config.md  16-cursor-zerodha.md  17-cursor-days.md  18-gemini-prompt.md  19-cursor-yfinance.md  20-gemini-prompt.md  21-cursor-prompt.md  22-cursor-next50.md  23-cursor-average.md
prompts/: 0-chatgpt-readme.md  06-chatgpt-prompt.md  08-cursor-gemini.md  09-cursor-nse.md  1-cursor-init.md  10-cursor-fixes.md  12-cursor-improvements.md  13-gemini-prompt.md  15-cursor-gains.md  16-cursor-zerodha.md  3-cursor-agent.md  5-cursor-research.md
scripts/: analyze_stocks.py  generate_portfolio.py  rebalance_portfolio.py  seed_prompts.py  setup_db.py
src/agents/: base.py  (+2 more)
tests/: test_stock_research.py
(+13 files in other folders)
